tests/tools/net/netdiff/invalidated_neigh/diff_nod.tools
<?xml version="1.0" encoding="UTF-8"?>

<!-- generated on 2023-01-26 23:21:39.786026 by netdiff.py v1_15_0+1985-a4f015c
  options: source.net.xml dest.net.xml diff <doubleminus>copy location
-->

<nodes version="1.16" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="http://sumo.dlr.de/xsd/nodes_file.xsd">
    <!-- Copied Elements -->
    <node id="S" type="dead_end"/>
    <!-- Deleted Elements -->
    <delete id="E"/>
    <!-- Created Elements -->
    <node id="gneJ0" type="priority" x="42.99" y="100.00"/>
    <!-- Changed Elements -->
    <node id="S" type="dead_end"/>
</nodes>
